Fixing Left and Right Shift on Button Clicks In case of multiple Playlist Categories

--- a/client/src/Components/MainScreen/AllContent/AllContent.css
+++ b/client/src/Components/MainScreen/AllContent/AllContent.css
@@ -2,8 +2,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 20px;
+    gap: 50px;
+    padding: 50px;
 }
 
 .section{
